--- a/hackmud_rng_z3.cbp
+++ b/hackmud_rng_z3.cbp
@@ -4,13 +4,13 @@
 	<Project>
 		<Option title="hackmud_rng_z3" />
 		<Option pch_mode="2" />
-		<Option compiler="mingw64" />
+		<Option compiler="mingw64new" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/hackmud_rng_z3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="mingw64" />
+				<Option compiler="mingw64new" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -19,7 +19,7 @@
 				<Option output="bin/Release/hackmud_rng_z3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="mingw64" />
+				<Option compiler="mingw64new" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
@@ -35,6 +35,7 @@
 		</Compiler>
 		<Linker>
 			<Add option="-lz3" />
+			<Add library="C:/msys64/mingw64/x86_64-w64-mingw32/lib/libz3.a" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
