--- a/hackmud_rng_z3.cbp
+++ b/hackmud_rng_z3.cbp
@@ -35,6 +35,7 @@
 		</Compiler>
 		<Linker>
 			<Add option="-lz3" />
+			<Add option="-lsfml-system" />
 			<Add library="C:/msys64/mingw64/x86_64-w64-mingw32/lib/libz3.a" />
 		</Linker>
 		<Unit filename="main.cpp" />
