ok, swanky new stuff

--- a/hackmud_rng_z3.cbp
+++ b/hackmud_rng_z3.cbp
@@ -4,13 +4,13 @@
 	<Project>
 		<Option title="hackmud_rng_z3" />
 		<Option pch_mode="2" />
-		<Option compiler="mingw64new" />
+		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/hackmud_rng_z3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="mingw64new" />
+				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -19,7 +19,7 @@
 				<Option output="bin/Release/hackmud_rng_z3" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
-				<Option compiler="mingw64new" />
+				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
 				</Compiler>
@@ -31,7 +31,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add option="-std=gnu++14" />
+			<Add option="-std=gnu++17" />
+			<Add option="-fno-strict-aliasing" />
 		</Compiler>
 		<Linker>
 			<Add option="-lz3" />
@@ -42,6 +43,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<fortran_project />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
